tests/invalid/scoping/out_of_scope.rs
/*
compilationExitCode: 3
*/

main(): i32 {
    {
        a: i64 = 2;
    }
    return a;
}